# textiler

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
crates/textiler/: Cargo.toml
crates/textiler-core/: Cargo.toml  theme.schema.json
crates/textiler-core/src/: components.rs  context.rs  error.rs  hooks.rs  lib.rs  style.rs  style_manager.rs  system_props.rs  theme.rs  utils.rs
crates/textiler-core/src/components/: surfaces.rs  system.rs  typography.rs
crates/textiler-core/src/components/surfaces/: sheet.rs
crates/textiler-core/src/context/: mode_context.rs  style_manager_context.rs  theme_context.rs
crates/textiler-core/src/hooks/: use_mode.rs  use_style_manager.rs  use_sx.rs  use_theme.rs
crates/textiler-core/src/style_manager/: stylist.rs
crates/textiler-core/src/theme/: baseline.rs  breakpoint.rs  color.rs  context.rs  gradient.rs  palette.rs  parsing.rs  sx.rs  theme.json  theme_mode.rs  typography.rs
crates/textiler-core/src/theme/context/: style_manager_context.rs
crates/textiler-core/src/theme/hooks/: use_mode.rs  use_style_manager.rs  use_sx.rs  use_theme.rs
crates/textiler-core/src/theme/sx/: sx_to_css.rs  sx_value.rs  sx_value_parsing.rs
crates/textiler-core/src/utils/: bounded_float.rs
crates/textiler-core/tests/: css_baseline_test.rs
crates/textiler/src/: lib.rs  link.rs  overlay.rs  surfaces.rs  system.rs  typography.rs
crates/textiler/src/surfaces/: card.rs
crates/textiler/tests/: cards.rs  links.rs
