[package]
name = "happiness"
edition = "2021"
version.workspace = true
description.workspace = true
authors.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0" }
stylist = { version = "0.13.0", features = ["yew", "parser", "yew_use_style"] }
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }
nom = "7.1.3"
indexmap = { version = "2.1.0", features = ["serde"] }
thiserror = "1.0.50"
gloo = "0.10.0"
heck = "0.4.1"
cssparser = "0.33.0"
rand = "0.8.5"
dark-light = "1.0.0"
web-sys = "0.3.65"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.88"
serde = { version = "1.0.193" }
serde_json = "1.0.108"
regex = "1.10.2"
log = "0.4.20"
more_collection_macros = "0.2.2"
minifier = "0.3.0"


[dev-dependencies]
yew = { version = "0.21.0", features=["ssr", "csr"] }
tokio = { version = "1.34.0", features=["rt", "macros"] }
wasm-bindgen-test = "0.3.38"
wasm-logger = "0.2.0"
